--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.14.0",
     "mongoose": "^4.7.1",
     "morgan": "^1.7.0",
+    "path": "^0.12.7",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-router": "^3.0.0"
