Start setting up user login and authentication

--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
   "homepage": "https://github.com/froglander/polyfuel#readme",
   "dependencies": {
     "axios": "^0.15.3",
+    "bcrypt": "^1.0.1",
     "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
+    "express-session": "^1.14.2",
     "mongoose": "^4.7.1",
     "morgan": "^1.7.0",
+    "passport": "^0.3.2",
     "path": "^0.12.7",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
