--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "axios": "^0.15.3",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "express-stormpath": "^3.1.8",
     "mongoose": "^4.7.1",
     "morgan": "^1.7.0",
     "react": "^15.4.1",
+    "react-document-title": "^2.0.2",
     "react-dom": "^15.4.1",
-    "react-router": "^3.0.0"
+    "react-router": "^3.0.0",
+    "react-stormpath": "^1.3.3"
   },
   "devDependencies": {
     "babel-core": "^6.3.13",
