--- a/package.json
+++ b/package.json
@@ -19,26 +19,30 @@
   "homepage": "https://github.com/froglander/polyfuel#readme",
   "dependencies": {
     "axios": "^0.15.3",
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
     "babel-plugin-react-transform": "^2.0.2",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "babel-runtime": "^6.20.0",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "express-stormpath": "^3.1.8",
+    "history": "^4.5.1",
     "moment": "^2.17.1",
-    "mongoose": "^4.7.1",
+    "mongoose": "^4.7.6",
     "morgan": "^1.7.0",
-    "react": "^15.4.1",
+    "react": "^15.4.2",
+    "react-datetime": "^2.8.3",
     "react-document-title": "^2.0.2",
-    "react-dom": "^15.4.1",
+    "react-dom": "^15.4.2",
     "react-router": "^3.0.0",
-    "react-stormpath": "^1.3.3",
-    "recharts": "^0.20.2"
+    "react-stormpath": "^1.3.4",
+    "recharts": "^0.20.2",
+    "webpack": "^1.14.0"
   },
   "devDependencies": {
-    "babel-core": "^6.3.13",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "webpack": "^1.13.1"
+    "webpack-dev-middleware": "^1.9.0"
   }
 }
